--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
     <link rel="stylesheet" href="./css/utilities.css">
 
 		<script defer src="./js/script.js"></script>
+
+		 <link rel="stylesheet" href="./css/dark-mode.css">
+
+	    <!-- JavaScript for toggling dark mode -->
+	    <script>
+		function toggleDarkMode() {
+		    const body = document.body;
+		    body.classList.toggle("dark-mode");
+		}
+	    </script>
+	<button onclick="toggleDarkMode()">Toggle Dark Mode</button>
+
 	</head>
 	<body>
     <!-- NAVBAR -->
