--- a/project-pages/project-template2.html
+++ b/project-pages/project-template2.html
@@ -68,7 +68,7 @@
             - Change the 'body-text' text to a short and sweet description of your project (maybe the same as the one on the project card)
             - Change "desktop.jpeg" to the image filename you uploaded in the assets/images folder.
           -->
-        <div class="main-title">Project Name</div>
+        <div class="main-title">Projeto2.</div>
         <div class="body-text">Projeto2.</div>
         <image class="project-header-image" src="../assets/images/desktop.jpeg">
       </div>
