--- a/index.html
+++ b/index.html
@@ -3,6 +3,25 @@
 	<head>
 		<meta charset="utf-8">
 
+    <style>
+      body {
+          padding: 25px;
+          background-color: white;
+          color: black;
+          font-size: 25px;
+      }
+
+      .dark-mode {
+          background-color: black;
+          color: white;
+      }
+
+      .light-mode {
+          background-color: white;
+          color: black;
+      }
+    </style>
+		
     <!-- 
       TODO
 
