--- a/index.html
+++ b/index.html
@@ -47,7 +47,24 @@
 	</head>
 
 	<body>
-		
+    <style>
+      body {
+          padding: 25px;
+          background-color: white;
+          color: black;
+          font-size: 25px;
+      }
+
+      .dark-mode {
+          background-color: black;
+          color: white;
+      }
+
+      .light-mode {
+          background-color: white;
+          color: black;
+      }
+    </style>
     <!-- NAVBAR -->
     <div class="navbar">
 	    <h3 id="DarkModetext">Dark Mode is OFF</h3>
