--- a/index.html
+++ b/index.html
@@ -2,36 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-    <!-- 
-    <style>
-      body {
-          padding: 25px;
-          background-color: white;
-          color: black;
-          font-size: 25px;
-      }
 
-      .dark-mode {
-          background-color: black;
-          color: white;
-      }
-
-      .light-mode {
-          background-color: white;
-          color: black;
-      }
-    </style>
-		
-    <!-- 
-      TODO
-
-      Upload your Unemployable (or whatever photo you like) to the assets/images folder
-      and change the name of the image below to match the uploaded one
-
-      Change the title in the <title> tag to whatever you would like the title of your portfolio to be
-
-      This should be the same across all pages.
-     -->
     <link rel="icon" href="./assets/images/1311.png" />
 		<title>Site</title>
     <meta name="description" content="A portfolio template for the Unemployables community.">
@@ -47,24 +18,48 @@
 	</head>
 
 	<body>
-    <style>
-      body {
-          padding: 25px;
-          background-color: white;
-          color: black;
-          font-size: 25px;
-      }
+<style>
+    body {
+        padding: 25px;
+        background-color: white;
+        color: black;
+        font-size: 25px;
+    }
 
-      .dark-mode {
-          background-color: black;
-          color: white;
-      }
+    .dark-mode {
+        background-color: black;
+        color: white;
+    }
 
-      .light-mode {
-          background-color: white;
-          color: black;
-      }
-    </style>
+    .light-mode {
+        background-color: white;
+        color: black;
+    }
+
+    /* Update text color to white when dark mode is active */
+    .dark-mode body {
+        color: white;
+    }
+
+    /* Adjust navbar elements for dark mode */
+    .navbar {
+        background-color: white; /* Light navbar background color */
+        color: black; /* Dark text color */
+    }
+
+    .navbar .nav-title {
+        color: black; /* Dark text color */
+    }
+
+    .navbar .button {
+        background-color: black; /* Dark button background color */
+        color: white; /* Light button text color */
+    }
+    .button{
+        background-color: white; /* Dark button background color */
+        color: black; /* Light button text color */
+    }
+</style>
     <!-- NAVBAR -->
     <div class="navbar">
 	    <h3 id="DarkModetext">Dark Mode is OFF</h3>
