--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
         background-color: white; /* Dark button background color */
         color: black; /* Light button text color */
     }
+    .footer-icon{
+        background-color: white; /* Dark button background color */
+        color: black; /* Light button text color */
+    }
+	
 </style>
     <!-- NAVBAR -->
     <div class="navbar">
